--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
 <!-- TRANG 1 -->
 <div class="screen active" id="screen1">
-  <img src="CNL_45.JPG" class="teacher-img">
+  <img src="CNL_45-min.JPG" class="teacher-img">
   <h2>Nhập ngày bắt đầu trên hành trình TT24 💖</h2>
   <div id="input"></div>
   <div class="keypad">
@@ -329,13 +329,13 @@
 <div class="screen" id="screen3">
   <h3>🎉 HAPPY TEACHER DAYS 20/11 🎉</h3>
   <div class="gallery" id="gallery">
-    <img src="TT24_min.jpg">
-    <img src="CNL_43_min.JPG">
-    <img src="CNL_45_min.JPG">
-    <img src="CNL_28_min.JPG">
-    <img src="CNL_14_min.JPG">
-    <img src="CNL_27_min.JPG">
-    <img src="CNL_7_min.JPG">
+    <img src="TT24-min.jpg">
+    <img src="CNL_43-min.JPG">
+    <img src="CNL_45-min.JPG">
+    <img src="CNL_28-min.JPG">
+    <img src="CNL_14-min.JPG">
+    <img src="CNL_27-min.JPG">
+    <img src="CNL_7-min.JPG">
   
     
   </div>
@@ -424,3 +424,4 @@ function openCard() {
 </script>
 </body>
 </html>
+
